radix-engine-tests/tests/dec_macros/src/pdec_err_expr_unary_op_not_supported.stderr
error: This macro only supports string, integer and float literals.
 --> src/pdec_err_expr_unary_op_not_supported.rs:4:29
  |
4 |     const X: Decimal = dec!(!1);
  |                             ^
