radix-engine-tests/tests/dec_macros/src/pdec_err_expr_unary_op_not_supported.rs
use radix_common::prelude::*;
use radix_engine_interface::prelude::*;
fn main() {
    const X: Decimal = dec!(!1);
}
